2002-09-05  John Sullivan  <sullivan@apple.com>

        * Resources/url_icon.tiff: New generic icon from Steve Lemay.
	The @ sign lives, but does not spring.

2002-09-04  Darin Adler  <darin@apple.com>

	One more pass of refinement on that last change.

        * History.subproj/WebBackForwardList.m: (-[WebBackForwardList addEntry:]):
	Replace the last entry instead of just ignoring if this one matches.

        * History.subproj/WebHistoryList.h: Add replaceEntryAtIndex. Remove addURL: and removeURL:.

        * History.subproj/WebHistoryList.m:
        (-[WebHistoryList addEntry:]): Call removeEntry: rather than using an entire pasted copy here.
        (-[WebHistoryList removeEntry:]): Use a hash of the URL and the URL rather than relying on the
	fact that WebHistoryItem hashes and does isEqual based on the URL only.
        (-[WebHistoryList replaceEntryAtIndex:withEntry:]): Added. Used by the code above.

2002-09-04  Darin Adler  <darin@apple.com>

	Fix bug where doing a reload adds an entry to the back/forward list.

        * History.subproj/WebBackForwardList.m: (-[WebBackForwardList addEntry:]):
	If URL, target, and parent all match, then don't add an entry.

        * WebKit.pbproj/project.pbxproj: Let Project Builder be the boss; I guess
	this means Chris is still using the old version.

2002-09-04  Chris Blumenberg  <cblu@apple.com>

	- don't set nil data on the web file db
	- store absolute URLs in the db, not base URL/path combination URLs
	- support for multiple hosts with the same built-in icon

        * Misc.subproj/WebIconDatabase.m:
        (-[WebIconDatabase init]): renamed some dictionaries
        (-[WebIconDatabase iconForSiteURL:withSize:]): call _builtInIconsForHost
        (-[WebIconDatabase _updateFileDatabase]): check for nil
        (-[WebIconDatabase _hasIconForSiteURL:]): call _pathForBuiltInIconForHost
        (-[WebIconDatabase _pathForBuiltInIconForHost:]): new